Fix #32 scrollable tab on mobile (#244)

--- a/app/screens/Groups/MyGroups/MyGroups.scss
+++ b/app/screens/Groups/MyGroups/MyGroups.scss
@@ -3,4 +3,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  .my-groups-card-content {
+    overflow-y: scroll;
+    width: 100%;
+  }
 }
